# serial-interface-cli

./: .gitignore  .gitmodules  CMakeIncludeGTest.txt  CMakeLists.txt  README.md  jenkins.sh
app/: CMakeLists.txt  main.cpp  serial-interfaceConfig.h.in  version.h.in
cli/: CMakeLists.txt  main.cpp  sf_serialmaccli.cpp  sf_serialmaccli.h  sf_serialmachandler.cpp  sf_serialmachandler.h  sf_stringhex.cpp  sf_stringhex.h  version.h.in
cli/test/: sf_teststringhex.cpp  test.h
cmake/: toolchain-cross-mingw-i686.cmake
cmake/cpack/: startcli.cmd
dep/observer/: CMakeLists.txt  sf_event.cpp  sf_event.h  sf_observer.h  sf_subject.cpp  sf_subject.h
dep/stringhex/: CMakeLists.txt
dep/stringhex/test/: sf_teststringhex.cpp
doc/: Doxyfile.in  serialmaccli_concept.graphml  serialmaclib_class.graphml
docker/: Dockerfile.debian  Dockerfile.ubuntu  Dockerfile.windows  buildpackage.sh
examples/: genericExample.bat  wmbusMeterExample.sh
ide/eclipse/: STACKFORCE-code-style.xml  STACKFORCE-codetemplates.xml  codetemplates.xml
ide/eclipse/libserialport/: .autotools  .cproject  .project  configure.ac
ide/eclipse/serial-interface/: .cproject  .project  serial-interface.launch
ide/eclipse/serial-interface-app/: .cproject  .project  serial-interface.launch
ide/eclipse/serial-interface-app/src/: serial-interface-app.cpp
ide/eclipse/serial-interface-c/: .cproject  .project
ide/eclipse/serial-interface-gunit/: .cproject  .project
ide/eclipse/serial-interface-lib/: .cproject  .project
inc/: serial-interface.h  sf_serialmac.h  stackforce_serial_mac_api.h  stzedn_serial_mac_api.h
lib/: CMakeLists.txt  sf_serialmac.c  sf_serialmac.h  version.h.in
lib/libserialport/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  serial-interface.cpp  sf_serialmac.c  sf_serialmac.h  sf_serialmaccli.cpp  sf_serialmaccli.h  sf_serialmaccli_config.h.in  stackforce_serial_mac.c  version.h.in
src-c/: serial-interface-c.c
tests/unit-testing/: .gitignore
tests/unit-testing/gmock/lib/: libgmock.la  libgmock_main.la
tests/unit-testing/gmock/lib/.libs/: libgmock.la  libgmock.lai  libgmock_main.la  libgmock_main.lai
tests/unit-testing/gtest/lib/: libgtest_main.la
tests/unit-testing/ide/eclipse/unit_test/: .cproject  .project
tests/unit-testing/mocks/: mocked_foobar_extern.cpp  mocked_foobar_extern.h
tests/unit-testing/src_under_test/: foobar.c  foobar.h
tests/unit-testing/unit_test_code/: printHex.cpp  printHex.h
tst/gunit/: CMakeLists.txt  README-where_the_heck_is_gtest.txt
tst/gunit/src_extern/: foobar_extern.c  foobar_extern.h
tst/gunit/src_under_test/: foobar.h  stzedn_typedefs.h
tst/gunit/tests/: sf_teststringhex.cpp  sf_teststringhex.h  test.cpp  test_sample.cpp
